--- a/dataset-mapping.json
+++ b/dataset-mapping.json
@@ -117,6 +117,12 @@
         "overlays": {
           "type": "nested",
           "properties": {
+            "title": { 
+              "type": "text",
+              "fields": { 
+                "raw": { "type": "keyword" }
+              }
+            },
             "name": { 
               "type": "text",
               "fields": { 
@@ -144,6 +150,12 @@
         "downloads": {
           "type": "nested",
           "properties": {
+            "title": { 
+              "type": "text",
+              "fields": { 
+                "raw": { "type": "keyword" }
+              }
+            },
             "name": { 
               "type": "text",
               "fields": { 
@@ -168,6 +180,12 @@
         "analytics": {
           "type": "nested",
           "properties": {
+            "title": { 
+              "type": "text",
+              "fields": { 
+                "raw": { "type": "keyword" }
+              }
+            },
             "name": { 
               "type": "text",
               "fields": { 
